# CMakeSampleProject

./: README.md
CMakeSampleProject/: CMakeLists.txt  Makefile
CMakeSampleProject.xcodeproj/: project.pbxproj
CMakeSampleProject.xcodeproj/project.xcworkspace/xcuserdata/loganmiller.xcuserdatad/: UserInterfaceState.xcuserstate
CMakeSampleProject.xcodeproj/xcuserdata/loganmiller.xcuserdatad/xcschemes/: xcschememanagement.plist
CMakeSampleProject/app/: CMakeLists.txt  main.cpp
CMakeSampleProject/cmake/: AddGitSubmodule.cmake
CMakeSampleProject/configure/: CMakeLists.txt
CMakeSampleProject/src/lib/: CMakeLists.txt  lib.cpp  lib.h
